feat: rename RHTAP resources to TSSC
This PR is related to the resources deployed by the installer.
Another PR will be needed to remove other mentions of RHTAP in the repo.

rh-pre-commit.version: 2.3.2
rh-pre-commit.check-secrets: ENABLED

--- a/pipelines/gitops-pull-request-rhtap/gitops-pull-request.yaml
+++ b/pipelines/gitops-pull-request-rhtap/gitops-pull-request.yaml
@@ -30,11 +30,11 @@ spec:
     - description: The Rekor host that EC should use to look up transparency logs
       name: ec-rekor-host
       type: string
-      default: http://rekor-server.rhtap-tas.svc
+      default: http://rekor-server.tssc-tas.svc
     - description: The TUF mirror that EC should use
       name: ec-tuf-mirror
       type: string
-      default: http://tuf.rhtap-tas.svc
+      default: http://tuf.tssc-tas.svc
     - description: The name of the Secret that contains Trustification (TPA) configuration
       name: trustification-secret-name
       type: string
