--- a/pipelines/rhtap/rhtap.yaml
+++ b/pipelines/rhtap/rhtap.yaml
@@ -254,11 +254,11 @@ spec:
     description: The public key that EC should use to verify signatures
     name: ec-public-key
     type: string
-  - default: http://rekor-server.rhtap-tas.svc
+  - default: http://rekor-server.tssc-tas.svc
     description: The Rekor host that EC should use to look up transparency logs
     name: ec-rekor-host
     type: string
-  - default: http://tuf.rhtap-tas.svc
+  - default: http://tuf.tssc-tas.svc
     description: The TUF mirror that EC should use
     name: ec-tuf-mirror
     type: string
