.tekton/push: fix docker auth mount path
In 0e7654818966eb2f929ccdcc0cf9f81a1ae17597, the HOME in the
appstudio-utils image changed to /tekton/home. Update the mount path of
the redhat-appstudio-tekton-catalog secret accordingly.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/.tekton/push.yaml
+++ b/.tekton/push.yaml
@@ -138,7 +138,7 @@ spec:
                 - name: OUTPUT_PIPELINE_BUNDLE_LIST
                   value: $(workspaces.source.path)/pipeline-bundle-list-appstudio
               volumeMounts:
-                - mountPath: /root/.docker/config.json
+                - mountPath: /tekton/home/.docker/config.json
                   subPath: .dockerconfigjson
                   name: quay-secret
             - name: update-acceptable-bundles
