feat(CLOUDDST-27284): improve scanning performance by using clamdscan
This change replaces clamscan with clamdscan to speed up scans on large
and multi-architecture container images.

clamscan is single-threaded and cannot leverage multiple CPU cores,
making it inefficient for scanning images with many files. It also
requires reloading the virus database for each scan, increasing overhead.

With clamdscan, scans are offloaded to the clamd daemon, which supports
multi-threaded scanning and shared database access, significantly
reducing scan time and CPU load.

Additionally, this update introduces Tekton's matrix feature to run
clamav-scan tasks in parallel—one per image architecture—greatly
improving performance for multi-arch images.

Also introduces a task migration script for the new version.

Signed-off-by: Zhiming Xiong <zxiong@redhat.com>

--- a/pipelines/docker-build-multi-platform-oci-ta/docker-build-multi-platform-oci-ta.yaml
+++ b/pipelines/docker-build-multi-platform-oci-ta/docker-build-multi-platform-oci-ta.yaml
@@ -314,7 +314,12 @@ spec:
       values:
       - "false"
     workspaces: []
-  - name: clamav-scan
+  - matrix:
+      params:
+      - name: image-arch
+        value:
+        - $(params.build-platforms)
+    name: clamav-scan
     params:
     - name: image-digest
       value: $(tasks.build-image-index.results.IMAGE_DIGEST)
@@ -324,7 +329,7 @@ spec:
     - build-image-index
     taskRef:
       name: clamav-scan
-      version: "0.2"
+      version: "0.3"
     when:
     - input: $(params.skip-checks)
       operator: in
