feat(STONEBLD-3431): Validate tasks and pipelines YAMLs
At the moment, errors in task and pipeline YAMLs only surface after the full CI run completes. This PR adds a GitHub Actions workflow that pre-validates task and pipeline YAMLs so that we can catch apply failures immediately.

* Added a bash script to generate & apply tasks and pipelines via kubectl
* Added a GH Actions workflow to prepare a cluster via kind, and invoke the script
* Modified the gitops-pull-request.yaml so that it can be applied on its own (by defining the workspaces it uses)

--- a/pipelines/gitops-pull-request-rhtap/gitops-pull-request.yaml
+++ b/pipelines/gitops-pull-request-rhtap/gitops-pull-request.yaml
@@ -162,3 +162,7 @@ spec:
       taskRef:
         name: upload-sbom-to-trustification
         version: "0.1"
+  workspaces:
+    - name: workspace
+    - name: git-auth
+      optional: true
