--- a/pipelines/rhtap/rhtap.yaml
+++ b/pipelines/rhtap/rhtap.yaml
@@ -387,3 +387,7 @@ spec:
     workspaces:
     - name: sboms
       workspace: workspace
+  workspaces:
+  - name: workspace
+  - name: git-auth
+    optional: true
