--- a/.tekton/pull-request.yaml
+++ b/.tekton/pull-request.yaml
@@ -5,7 +5,7 @@ metadata:
   name: build-definitions-pull-request
   annotations:
     pipelinesascode.tekton.dev/on-cel-expression: (event == "pull_request" && target_branch == "main" && ( !has(body.pull_request) || !body.pull_request.draft) ) || (event == "push" && target_branch.startsWith("gh-readonly-queue/main/") && body.head_commit != "null" )
-    pipelinesascode.tekton.dev/task: "[task/git-clone/0.1/git-clone.yaml, .tekton/tasks/buildah.yaml, .tekton/tasks/task-lint.yaml, .tekton/tasks/e2e-test.yaml, task/sast-snyk-check/0.2/sast-snyk-check.yaml, task/sast-unicode-check/0.1/sast-unicode-check.yaml, .tekton/tasks/task-switchboard.yaml]"
+    pipelinesascode.tekton.dev/task: "[task/git-clone/0.1/git-clone.yaml, .tekton/tasks/buildah.yaml, .tekton/tasks/task-lint.yaml, .tekton/tasks/e2e-test.yaml, task/sast-snyk-check/0.4/sast-snyk-check.yaml, task/sast-unicode-check/0.2/sast-unicode-check.yaml, .tekton/tasks/task-switchboard.yaml]"
     pipelinesascode.tekton.dev/max-keep-runs: "5"
 spec:
   params:
@@ -52,6 +52,11 @@ spec:
       - name: sast-snyk-check
         runAfter:
           - fetch-repository
+        params:
+          - name: image-url
+            value: "$(tasks.build-appstudio-utils.results.IMAGE_URL)"
+          - name: image-digest
+            value: "$(tasks.build-appstudio-utils.results.IMAGE_DIGEST)"
         taskRef:
           name: sast-snyk-check
         workspaces:
@@ -90,6 +95,9 @@ spec:
       - name: sast-unicode-check
         runAfter:
           - build-appstudio-utils
+        params:
+          - name: image-digest
+            value: "$(tasks.build-appstudio-utils.results.IMAGE_DIGEST)"
         taskRef:
           name: sast-unicode-check
         workspaces:
