feat: Add slack-webhook-notification-oci-ta task
This allows users to send a slack notification when a merge build pipeline fails, or when a new artifact is available for example.

This task was created with a recipe with the non-oci-ta equivalent.

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -26,6 +26,7 @@
 /task/show-sbom                             @konflux-ci/build-maintainers
 /task/show-sbom-rhdh                        @konflux-ci/build-maintainers
 /task/slack-webhook-notification            @konflux-ci/build-maintainers
+/task/slack-webhook-notification-oci-ta     @konflux-ci/build-maintainers
 /task/source-build                          @konflux-ci/build-maintainers
 /task/source-build-oci-ta                   @konflux-ci/build-maintainers
 /task/summary                               @konflux-ci/build-maintainers
