--- a/renovate.json
+++ b/renovate.json
@@ -58,6 +58,7 @@
         "task/push-dockerfile/**",
         "task/show-sbom-rhdh/**",
         "task/show-sbom/**",
+        "task/slack-webhook-notification-oci-ta/**",
         "task/slack-webhook-notification/**",
         "task/source-build-oci-ta/**",
         "task/source-build/**",
