sast-coverity-check: always pull coverity image
The task references the image by a non-latest floating tag only, not by
digest. The default pull policy in that case is IfNotPresent [1], which
means that Nodes which already have the image cached will not attempt to
pull a newer revision.

Make sure the task always uses the latest image by explicitly setting
the pull policy to Always.

[1]: https://kubernetes.io/docs/concepts/containers/images/#imagepullpolicy-defaulting

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/sast-coverity-check-oci-ta/0.3/sast-coverity-check-oci-ta.yaml
+++ b/task/sast-coverity-check-oci-ta/0.3/sast-coverity-check-oci-ta.yaml
@@ -444,6 +444,7 @@ spec:
         fi
     - name: build
       image: quay.io/redhat-services-prod/sast/coverity:202503.1
+      imagePullPolicy: Always
       args:
         - --build-args
         - $(params.BUILD_ARGS[*])
