--- a/task/sast-coverity-check/0.3/sast-coverity-check.yaml
+++ b/task/sast-coverity-check/0.3/sast-coverity-check.yaml
@@ -410,6 +410,7 @@ spec:
         /shared/license.dat:/opt/coverity/bin/license.dat
         /usr/libexec/csgrep-static:/usr/libexec/csgrep-static
     image: quay.io/redhat-services-prod/sast/coverity:202503.1
+    imagePullPolicy: Always
     name: build
     script: |
       #!/bin/bash
