--- a/stepactions/eaas-create-ephemeral-cluster-hypershift-aws/0.1/eaas-create-ephemeral-cluster-hypershift-aws.yaml
+++ b/stepactions/eaas-create-ephemeral-cluster-hypershift-aws/0.1/eaas-create-ephemeral-cluster-hypershift-aws.yaml
@@ -38,6 +38,10 @@ spec:
       description: >-
         Alternate registry information containing a list of sources and their mirrors in yaml format.
         See: https://hypershift-docs.netlify.app/how-to/disconnected/image-content-sources
+    - name: fips
+      type: string
+      default: "false"
+      description: Enable FIPS mode for the cluster.
   results:
     - name: clusterName
       description: The name of the generated ClusterTemplateInstance resource.
@@ -61,6 +65,8 @@ spec:
       value: "$(params.imageContentSources)"
     - name: TENANT
       value: "$(context.taskRun.namespace)"
+    - name: FIPS
+      value: "$(params.fips)"
   script: |
     #!/bin/bash
     set -eo pipefail
@@ -82,6 +88,7 @@ spec:
     yq -i '.spec.parameters += {"name": "version", "value": strenv(VERSION)}' cti.yaml
     yq -i '.spec.parameters += {"name": "timeout", "value": strenv(TIMEOUT)}' cti.yaml
     yq -i '.spec.parameters += {"name": "imageContentSources", "value": strenv(IMAGE_CONTENT_SOURCES)}' cti.yaml
+    yq -i '.spec.parameters += {"name": "fips", "value": strenv(FIPS)}' cti.yaml
 
     echo "Creating the following resource:"
     cat cti.yaml
