Pass IMAGE_URL and IMAGE_DIGEST to build-source-image task
STONEBLD-8161

build-source-image task should always reference the binary image built
by the same PipelineRun. To achieve this, reference the binary image via
build task results IMAGE_URL and IMAGE_DIGEST instead.

The problem of referencing only by Pipeline parameter output-image is
that, when using floating tag in the value of output-image, the latest
source container image can be overwritten by an older one.

Major changes:

* Task migration is added to update parameters of task
  build-source-image.
* Use digest-pinned image in get-base-images step.
* Stop build earlier if binary image no longer exists.
* Manually update source-container-build image with the corresponding
  changes to the build-tasks-dockerfiles/source-container-build.

--- a/pipelines/docker-build-oci-ta/docker-build-oci-ta.yaml
+++ b/pipelines/docker-build-oci-ta/docker-build-oci-ta.yaml
@@ -212,7 +212,9 @@ spec:
   - name: build-source-image
     params:
     - name: BINARY_IMAGE
-      value: $(params.output-image)
+      value: $(tasks.build-image-index.results.IMAGE_URL)
+    - name: BINARY_IMAGE_DIGEST
+      value: $(tasks.build-image-index.results.IMAGE_DIGEST)
     - name: SOURCE_ARTIFACT
       value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
     - name: CACHI2_ARTIFACT
@@ -221,7 +223,7 @@ spec:
     - build-image-index
     taskRef:
       name: source-build-oci-ta
-      version: "0.2"
+      version: "0.3"
     when:
     - input: $(tasks.init.results.build)
       operator: in
