--- a/pipelines/template-build/template-build.yaml
+++ b/pipelines/template-build/template-build.yaml
@@ -152,10 +152,12 @@ spec:
         - build-image-index
       taskRef:
         name: source-build
-        version: "0.2"
+        version: "0.3"
       params:
         - name: BINARY_IMAGE
-          value: "$(params.output-image)"
+          value: "$(tasks.build-image-index.results.IMAGE_URL)"
+        - name: BINARY_IMAGE_DIGEST
+          value: "$(tasks.build-image-index.results.IMAGE_DIGEST)"
       workspaces:
         - name: workspace
           workspace: workspace
