task-generator: ta: Use a renamed CLI artifact for source_build.py
No tool should directly reference cachi2 in its name, options,
anything.

Signed-off-by: Erik Skultety <eskultet@redhat.com>

--- a/task-generator/trusted-artifacts/golden/source-build/base.yaml
+++ b/task-generator/trusted-artifacts/golden/source-build/base.yaml
@@ -152,7 +152,7 @@ spec:
           --source-dir "$SOURCE_DIR" \
           --base-images "$base_images" \
           --write-result-to "$RESULT_FILE" \
-          --cachi2-artifacts-dir "$CACHI2_ARTIFACTS_DIR" \
+          --prefetch-artifacts-dir "$CACHI2_ARTIFACTS_DIR" \
           --registry-allowlist="$registry_allowlist"
 
         cat "$RESULT_FILE" | jq -j ".image_url" >"$RESULT_SOURCE_IMAGE_URL"
