--- a/task/source-build-oci-ta/0.3/source-build-oci-ta.yaml
+++ b/task/source-build-oci-ta/0.3/source-build-oci-ta.yaml
@@ -216,7 +216,7 @@ spec:
           --source-dir "$SOURCE_DIR"
           --base-images "$base_images"
           --write-result-to "$RESULT_FILE"
-          --cachi2-artifacts-dir "$CACHI2_ARTIFACTS_DIR"
+          --prefetch-artifacts-dir "$CACHI2_ARTIFACTS_DIR"
           --registry-allowlist="$registry_allowlist"
         )
         if [ "$IGNORE_UNSIGNED_IMAGE" == "true" ]; then
