task: prefetch-dependencies: Add a RPM fake repo compatibility hack
This builds upon previous patch which replaced all cachi2 invocations
to hermeto which also means that the 'cachi2.repo' fake repo file that
is created as part of the prefetch task with RPMs would not be
available which might break users. Make sure we rename the file
post-fetch so that users can continue relying on it until there's a new
version of the task which will flip this for good.

Signed-off-by: Erik Skultety <eskultet@redhat.com>

--- a/task-generator/trusted-artifacts/golden/prefetch-dependencies/base.yaml
+++ b/task-generator/trusted-artifacts/golden/prefetch-dependencies/base.yaml
@@ -102,6 +102,14 @@ spec:
 
       hermeto --log-level="$LOG_LEVEL" inject-files $(workspaces.source.path)/cachi2/output \
       --for-output-dir=/cachi2/output
+
+      # NOTE: Compatibility hack, hermeto will create a hermeto.repo when processing RPMs (1 for
+      # each architecture) which may break users expecting cachi2.repo
+      find /var/workdir/cachi2/output \
+        -type f \
+        -name hermeto.repo \
+        -execdir mv {} cachi2.repo \;
+
   workspaces:
   - name: source
     description: Workspace with the source code, prefetch artifacts will be stored on the workspace as well
