--- a/task-generator/trusted-artifacts/golden/prefetch-dependencies/ta.yaml
+++ b/task-generator/trusted-artifacts/golden/prefetch-dependencies/ta.yaml
@@ -147,6 +147,14 @@ spec:
 
       hermeto --log-level="$LOG_LEVEL" inject-files /var/workdir/cachi2/output \
       --for-output-dir=/cachi2/output
+
+      # NOTE: Compatibility hack, hermeto will create a hermeto.repo when processing RPMs (1 for
+      # each architecture) which may break users expecting cachi2.repo
+      find /var/workdir/cachi2/output \
+        -type f \
+        -name hermeto.repo \
+        -execdir mv {} cachi2.repo \;
+
   - image: quay.io/konflux-ci/build-trusted-artifacts:latest@sha256:resolved
     name: create-trusted-artifact
     env:
